criado metodos e campos para cadastrar um novo item, atualizar e deletar

--- a/minha-lista-front/src/app/list-items/list-items.component.html
+++ b/minha-lista-front/src/app/list-items/list-items.component.html
@@ -1,15 +1,3 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
-
-
 <html>
   <body>
     <div class="card-list-header">
@@ -17,47 +5,66 @@
     </div>
 
     <div class="card-list-panel">
-
-      <div *ngFor="let item of items; let i = index;" class="card-item">
-        <div class="">
-          <input type="checkbox" name="checkbox" id="checkbox" (click)="addSelectedItem(item.desc, i)">
-          <input #input type="text" class="item-text" value={{item.nome}} (input)="editItem($event,i)" (keydown.enter)="addItem()" tabindex="-1">
-        </div>
-        <img src="../assets/delete.svg" alt="" (click)="removeItem(i)">
+      <div *ngFor="let item of items; let i = index" class="card-item">
+        <ul class="">
+          <li class="item-lista">
+            <input
+              type="checkbox"
+              name="checkbox"
+              id="checkbox"
+              (click)="addSelectedItem(item)"
+            />
+            <span>{{ item.nome | titlecase }}</span>
+            <img
+              src="../assets/delete.svg"
+              class="lixeira"
+              alt=""
+              (click)="deleteItem(item.id)"
+            />
+          </li>
+        </ul>
       </div>
 
       <div class="card-item add">
         <div>
-          <img src="../assets/add.svg" alt="">
+          <img src="../assets/add.svg" alt="" (click)="addItem()" />
           <button (click)="addItem()">Adicionar Item</button>
         </div>
       </div>
 
-      <div *ngFor="let selectedItem of selectedItems; let i = index" class="card-item selected">
+      <div *ngFor="let selectedItem of selectedItems; let i = index" class="card-item selected" >
         <div class="">
-          <input type="checkbox" name="checkbox" id="checkbox" checked="checked" (click)="removeSelectedItem(selectedItem.desc, i)">
-          <span><s>{{selectedItem.desc}}</s></span>
+          <ul class="">
+            <li class="item-lista">
+              <input
+                type="checkbox"
+                name="checkbox"
+                id="checkbox"
+                checked="{{selectedItem.ativo}}"
+                (click)="removeSelectedItem(selectedItem)"
+              />
+              <span><s>{{ selectedItem.nome | titlecase }}</s></span>
+              <img
+                src="../assets/delete.svg"
+                class="lixeira"
+                alt=""
+                (click)="deleteItem(selectedItem.id)"
+              />
+            </li>
+          </ul>
         </div>
-        <img src="../assets/delete.svg" alt="" (click)="deleteSelectedItem(i)">
       </div>
 
+      <div *ngIf="add" class="inserir">
+        <input type="text" class="nomeItem" [(ngModel)]="item.nome"> 
+        <img
+          src="../assets/check.svg"
+          class="check"
+          alt=""
+          (click)="cadastrarItem()"
+        />
+      </div>
     </div>
 
   </body>
 </html>
-
-
-
-
-
-<!-- <router-outlet></router-outlet> -->
-
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
