--- a/minha-lista-front/src/app/list-items/list-items.component.css
+++ b/minha-lista-front/src/app/list-items/list-items.component.css
@@ -1,71 +1,104 @@
-*{
-  font-family: 'Calibri', Times, serif, sans-serif;
+* {
+  font-family: sans-serif;
 }
+
 .card-item {
-    border: 1px solid black;
-    width: 80%;
-    height: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
+  border: 1px solid rgb(255, 255, 255);
+  width: 80%;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
+  background-color: #f3f3f3;
+}
 
-  .card-list-panel {
-    background: rgb(221, 221, 221);
-    height: 100vh;
-    width: 50vw;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 0.5rem;
-    flex-direction: column;
-  }
+.card-list-panel {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 0.5rem;
+  flex-direction: column;
+}
 
-  body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
-  .card-list-header{
-    background: darkgray;
-    width: 50vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.card-list-header {
+  background: rgb(38, 157, 255);
+  width: 100%;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  text-shadow: 1px 1px 2px rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .item-text{
-    border: none;
-    margin-left: 1rem;
-    outline: none;
-    background: transparent;
-    cursor: text;
-  }
 
-  .add button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    margin-left: 0.5rem;
-  }
+.add button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-left: 0.5rem;
+}
 
-  .add div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.add div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .selected span {
-    margin-left: 1rem;
-  }
+.selected span {
+  margin-left: 1rem;
+}
 
-  img {
-    height: 1rem;
-    width: 1rem;
-    cursor: pointer;
-  }
+img {
+  height: 1rem;
+  width: 1rem;
+  cursor: pointer;
+}
+
+.item-lista {
+  width: 100%;
+  margin-left: 1.5rem;
+}
+
+.item-lista span {
+  padding-right: 21.5rem;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.lixeira {
+  position: absolute;
+  right: 180px;
+}
+
+.inserir {
+  margin-bottom: 2rem;
+}
+
+input {
+  margin-right: 1rem;
+}
+
+.nomeItem {
+  width: 16rem;
+}
+
+.check {
+  width: 2rem;
+  height: 1.5rem;
+  margin-top: 1rem;
+}
